--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 <header>
     <img src="logo-removebg-preview.png" alt="Logo" class="logo">
     <nav>
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutus.html">About Us</a>
         <a href="shop.html">Products</a>
         <a href="shoppingCart.html">Shopping Cart</a>
@@ -118,7 +118,7 @@
 <footer>
     <img src="logo-removebg-preview.png" alt="Footer Logo">
     <nav>
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutus.html">About Us</a>
         <a href="shop.html">Products</a>
         <a href="shoppingCart.html">Shopping Cart</a>
