--- a/shop.html
+++ b/shop.html
@@ -12,7 +12,7 @@
     <header>
     <img src="logo-removebg-preview.png" alt="Logo" class="logo">
     <nav>
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutus.html">About Us</a>
         <a href="shop.html">Products</a>
         <a href="shoppingCart.html">Shopping Cart</a>
@@ -282,7 +282,7 @@ document.getElementById('modal-add-btn').addEventListener('click', () => {
    <footer>
     <img src="logo-removebg-preview.png" alt="Footer Logo">
     <nav>
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="aboutus.html">About Us</a>
         <a href="products.html">Products</a>
         <a href="shoppingcart.html">Shopping Cart</a>
